--- a/Tribute.css
+++ b/Tribute.css
@@ -52,7 +52,39 @@ main{
 .Content{
     background-color: rgb(233, 245, 220);
     padding: 20px;
-    border-radius: 5px;
+    border-radius: 15px;
 
 }
 
+nav{
+margin: 1em auto 3em auto;
+width: 1000px, 100%;
+padding-left: 40px;
+
+}
+
+nav ul{
+
+display: flex;
+align-items: right;
+list-style-type: none;
+gap: 2em
+
+}
+
+nav li :first-child{
+    margin: auto;
+    align-items: center;
+}
+
+nav a{
+text-decoration: none;
+color: blue;
+
+}
+
+nav a:hover {
+text-decoration: underline;
+
+
+}
